# SilverBlueDiamond

./: BlackJack.c  CMakeLists.txt  Funciones.h  Jugador.c  Proyecto final.docx  README.md  REDDOG-ESTETICA.c  REDDOG.c  fcraps.c  github.xml  jfuncc.c  main.c  minunit.c  minunit.h  ruleta.c  ui.lnf.xml  vcs.xml
BlackJack/: BlackJack.c  BlackJack.h  main.c  minunit.h
Craps/: fcraps.c  fcraps.h  maincp.c
Estetica/: Blackjack-Estetica.c  Craps-Estetica.c  Jackpot-Estetica.c  Main-Estetica.c  REDDOG-ESTETICA.c
JACKPOT/: Jackmain.c  jfuncc.c  jfuncc.h
Juegos/: BlackJack.c  Jugador.c  Reddo.c  fcraps.c  jfuncc.c  ruleta.c
MISSISSIPI-STUD/: MississipiStud.h
RedDog/: REDDOG-ESTETICA.c  REDDOG.c  REDDOG.h  main.c
colors/: _@user_VibrantInk.icls
ruleta/: ruleta.c
